@@ -21,6 +21,7 @@ Generator::Map Generator::s_insert =
     {"namespace-close",             &Generator::namespaceClose},
     {"namespace-use",               &Generator::namespaceUse},
     {"polymorphic",                 &Generator::polymorphic},
+    {"polymorphicCode",             &Generator::polymorphicCode},
     {"polymorphicInline",           &Generator::polymorphicInline},
     {"polymorphicSpecializations",  &Generator::polymorphicSpecializations},
     {"preincludes",                 &Generator::preIncludes},
@@ -29,6 +30,7 @@ Generator::Map Generator::s_insert =
     {"staticdata",                  &Generator::staticData},
     {"threading",                   &Generator::threading},
     {"tokens",                      &Generator::tokens},
+    {"warnTagMismatches",           &Generator::warnTagMismatches},
     {"LTYPE",                       &Generator::ltype},
     {"LTYPEdata",                   &Generator::ltypeData},
     {"LTYPEpop",                    &Generator::ltypePop},
