@@ -11,6 +11,10 @@ void Options::setBooleans()
         d_printTokens = true;
     }
 
+    if (d_arg.option('N'))
+        d_defaultActions = false;
+
+
     if (d_arg.option(0, "error-verbose"))
         d_errorVerbose = true;
 
@@ -19,4 +23,11 @@ void Options::setBooleans()
 
     if (d_arg.option(0, "no-lines"))
         d_lines = false;
+
+    if (d_arg.option(0, "no-default-constructors"))
+        d_checkDefaultConstructors = false;
+
+    if (d_arg.option(0, "warn-tag-mismatches"))
+        d_warnTagMismatches = true;
+
 }
