@@ -12,10 +12,11 @@
 %token BASECLASS_HEADER BASECLASS_PREINCLUDE BLOCK CLASS_HEADER CLASS_NAME
         DEBUGFLAG ERROR_VERBOSE EXPECT FILENAMES FLEX IDENTIFIER
         IMPLEMENTATION_HEADER LEFT LOCATIONSTRUCT LSP_NEEDED LTYPE NAMESPACE
-        NEG_DOLLAR NOLINES NONASSOC NUMBER PARSEFUN_SOURCE POLYMORPHIC PREC
-        PRINT_TOKENS QUOTE REQUIRED RIGHT SCANNER SCANNER_CLASS_NAME
-        SCANNER_MATCHED_TEXT_FUNCTION SCANNER_TOKEN_FUNCTION START STRING
-        STYPE TARGET_DIRECTORY TOKEN TWO_PERCENTS TYPE UNION WEAK_TAGS 
+        NEG_DOLLAR NODEFAULT_CONS NODEFAULT_ACTIONS NOLINES NONASSOC NUMBER
+        PARSEFUN_SOURCE POLYMORPHIC PREC PRINT_TOKENS QUOTE REQUIRED RIGHT
+        SCANNER SCANNER_CLASS_NAME SCANNER_MATCHED_TEXT_FUNCTION
+        SCANNER_TOKEN_FUNCTION START STRING STYPE TARGET_DIRECTORY TOKEN
+        TWO_PERCENTS TYPE UNION WARN_TAGS WEAK_TAGS
         
 %polymorphic    BOOL:       bool;
                 SIZE_T:     size_t;
