@@ -111,7 +111,7 @@ $insert 4 staticdata
 
 $insert namespace-open
 
-$insert polymorphic-cc
+$insert polymorphic-code
 
 // If the parsing function call uses arguments, then provide an overloaded
 // function.  The code below doesn't rely on parameters, so no arguments are
